Java 20 Valhalla
It's now based on the Java 20 release of Valhalla and the SmallSet is
now a custom primitive class instead of "inline".